syntax = "proto3";
package prismfinance.prismcore.icq;

import "cosmos_proto/cosmos.proto";
import "tendermint/crypto/proof.proto";

option go_package = "github.com/prism-finance/prism-core/x/icq/types";

// Msg defines the icq Msg service.
service Msg {
  rpc SubmitQueryResponse(MsgSubmitQueryResponse) returns (MsgSubmitQueryResponseResponse);
}

message MsgSubmitQueryResponse {
  string chain_id = 1;
  string query_id = 2;
  bytes result = 3;
  tendermint.crypto.ProofOps proof_ops = 4;
  int64 height = 5;
  string from_address = 6 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message MsgSubmitQueryResponseResponse {}
